[project]
name = "bnr-converter"
version = "0.1.6"
description = "MCP server for converting foreign currency amounts to RON (Romanian New Leu) using the rates published by BNR (Banca Nationala a Romaniei)"
authors = [
    { name = "Mihai Ionita", email = "mionita1980@proton.me" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
 "fastmcp>=3.2.3",
 "starlette>=1.0.0",
 "uvicorn>=0.44.0",
 "requests>=2.33.1",
]

[project.urls]
Homepage = "https://github.com/mionita1980/bnr-converter-mcp-server"
Source = "https://github.com/mionita1980/bnr-converter-mcp-server"

[project.scripts]
bnr-converter = "bnrconverter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bnrconverter"]
